# a2a-registry

./: Makefile  README.md  env.dist  pyproject.toml
app/: config.py  logger.py  main.py
tests/: test_main.py
